--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "clockwork-utils"
+name = "m-clockwork-utils"
 version = "2.0.19"
 description = "Tools for building blocks on Solana"
 edition = "2021"
