--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "m-clockwork-utils"
-version = "2.0.19"
+name = "miclockwork-utils"
+version = "0.1.0"
 description = "Tools for building blocks on Solana"
 edition = "2021"
 license = "AGPL-3.0-or-later"
 homepage = "https://clockwork.xyz"
-repository = "https://github.com/clockwork-xyz/clockwork"
+repository = "https://github.com/Maius-Protocol/clockwork/tree/test-sdk"
 documentation = "https://docs.clockwork.xyz"
 readme = "./README.md"
 keywords = ["solana"]
 
 [lib]
-name = "clockwork_utils"
+name = "miclockwork_utils"
 
 [dependencies]
 anchor-lang = "0.28.0"
