--- a/cron/Cargo.toml
+++ b/cron/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "clockwork-cron"
-version = "2.0.19"
+name = "miclockwork-cron"
+version = "0.1.0"
 description = "A cron expression parser that's safe to use in the Solana runtime"
 edition = "2021"
 license = "AGPL-3.0-or-later"
 homepage = "https://clockwork.xyz"
-repository = "https://github.com/clockwork-xyz/clockwork"
+repository = "https://github.com/Maius-Protocol/clockwork/tree/test-sdk"
 documentation = "https://docs.clockwork.xyz"
 readme = "./README.md"
 keywords = ["solana"]
 
 [lib]
-name = "clockwork_cron"
+name = "miclockwork_cron"
 
 [dependencies]
 chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
