--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,12 +18,12 @@ anyhow = "1.0.61"
 bincode = "1.3.3"
 bzip2 = "0.4"
 clap = { version = "3.1.2", features = ["derive"] }
-clockwork-cron = { path = "../cron", version = "=2.0.19" }
-clockwork-network-program = { path = "../programs/network", version = "=2.0.19", features = ["no-entrypoint"] }
+miclockwork-cron = { path = "../cron", version = "=0.1.0" }
+miclockwork-network-program = { path = "../programs/network", version = "=0.1.0", features = ["no-entrypoint"] }
 clockwork-relayer-api = { path = "../relayer/api", version = "=2.0.19" }
 clockwork-plugin-utils= { path = "../plugin/utils", version = "=2.0.19" }
-clockwork-thread-program = { path = "../programs/thread", version = "=2.0.19", features = ["no-entrypoint"] }
-clockwork-utils = { path = "../utils", version = "=2.0.19" }
+miclockwork-thread-program = { path = "../programs/thread", version = "=0.1.0", features = ["no-entrypoint"] }
+miclockwork-utils = { path = "../utils", version = "=0.1.0" }
 clockwork-webhook-program = { path = "../programs/webhook", version = "=2.0.19", features = ["no-entrypoint"] }
 chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
 dirs-next = "2.0.0"
