--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -26,14 +26,14 @@ bincode = "1.3.3"
 bs58 = "0.4.0"
 bugsnag = "0.2.1"
 chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
-clockwork-cron = { path = "../cron", version = "=2.0.19" }
-clockwork-network-program = { path = "../programs/network", version = "=2.0.19" }
+miclockwork-cron = { path = "../cron", version = "=0.1.0" }
+miclockwork-network-program = { path = "../programs/network", version = "=0.1.0" }
 clockwork-plugin-utils = { path = "utils", version = "=2.0.19" }
 clockwork-relayer-api = { path = "../relayer/api", version = "=2.0.19" }
-clockwork-thread-program = { package = "clockwork-thread-program", path = "../programs/thread", version = "=2.0.19" }
-clockwork-thread-program-v1 = { package = "clockwork-thread-program-v1", path = "../programs/thread/v1", version = "=1.4.4" }
+miclockwork-thread-program = { package = "miclockwork-thread-program", path = "../programs/thread", version = "=0.1.0" }
+miclockwork-thread-program-v1 = { package = "miclockwork-thread-program-v1", path = "../programs/thread/v1", version = "=0.1.0" }
 clockwork-webhook-program = { path = "../programs/webhook", version = "=2.0.19" }
-clockwork-utils = { path = "../utils", version = "=2.0.19" }
+miclockwork-utils = { path = "../utils", version = "=0.1.0" }
 lazy_static = "1.4.0"
 log = "0.4"
 prost = "0.10.0"
