--- a/programs/webhook/Cargo.toml
+++ b/programs/webhook/Cargo.toml
@@ -23,6 +23,6 @@ default = []
 
 [dependencies]
 anchor-lang = { features = ["init-if-needed"], version = "0.28.0" }
-clockwork-network-program = { path = "../network", features = ["cpi"], version = "=2.0.19" }
-clockwork-utils = { path = "../../utils", version = "=2.0.19" }
+miclockwork-network-program = { path = "../network", features = ["cpi"], version = "=0.1.0" }
+miclockwork-utils = { path = "../../utils", version = "=0.1.0" }
 serde = "1.0.152"
